src/objects/Web_Service_Value_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>label__c</fullName>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pricing_model_id__c</fullName>
        <label>Pricing model</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>web_service_parameter_id__c</fullName>
        <label>Web service parameter identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>web_service_value__c</fullName>
        <label>Web service value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Web Service Value Mapping</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>web_service_parameter_id__c</columns>
        <columns>pricing_model_id__c</columns>
        <columns>label__c</columns>
        <columns>value__c</columns>
        <columns>web_service_value__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>WSV-{0000000000}</displayFormat>
        <label>Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Web Service Values Mapping</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>